# modulizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  README.md  fmt.ixx  modulizer.toml  vcpkg.json
bindings/cpp/: CMakeLists.txt  modulizer.ixx  native.ixx
bindings/cpp/src/: builder.ixx  core.ixx  generation_result.ixx  modulizer.ixx  native.ixx  options.ixx
bindings/cpp/tests/: CMakeLists.txt  builder_test.cpp
include/: modulizer.h
samples/: sample.hpp
src/: lib.rs  main.rs
src/cli/: args.rs
src/config/: cli.rs  config.rs  file.rs  mod.rs
src/ffi/: builder.rs  config.rs  core.rs  mod.rs  preprocessor.rs  strings.rs
src/parser/: common.rs  extractor.rs  grammar.rs  macros.rs  mod.rs  preprocessor.rs  structure.rs  symbols.rs  translation.rs
src/parser/grammar/: mod.rs  preprocessor.rs  tokens.rs
src/preprocessor/: expander.rs  include_syntax.rs  lexemes.rs  lexer.rs  mod.rs  preprocessor.rs  tokens.rs
src/writer/: cpp_output.rs  file_writer.rs  mod.rs  symbols.rs
tests/: symbol_parse_test.rs
