[package]
name = "modulizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0.102"
itertools = "0.13"
logos = "0.16.1"
chumsky = "0.13.0"
regex = "1.12.3"
serde_regex = "1.2.0"
ustr = "1.1.0"
arraystring = "0.3.0"
derive_builder = "0.20.2"
